@@ -186,14 +186,6 @@ impl SocksProxyUdpAssociateTask {
         if let Some(user_ctx) = self.task_notes.user_ctx() {
             let user_ctx = user_ctx.clone();
 
-            let action = user_ctx.check_client_addr(self.task_notes.client_addr());
-            self.handle_user_acl_action(
-                action,
-                &mut clt_tcp_w,
-                ServerTaskForbiddenError::SrcBlocked,
-            )
-            .await?;
-
             if user_ctx.check_rate_limit().is_err() {
                 self.reply_forbidden(&mut clt_tcp_w).await;
                 return Err(ServerTaskError::ForbiddenByRule(
